[package]
name = "comboios"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["json"]}
futures = "0.3"
tokio = {version = "1.14.0", features = ["rt", "rt-multi-thread", "macros"]}
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"